--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
 asgiref==3.6.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==40.0.2
+defusedxml==0.7.1
 Django==4.2
+django-allauth==0.54.0
+django-mailjet==0.3.1
 humanize==4.6.0
+idna==3.4
+mailjet-rest==1.3.4
+oauthlib==3.2.2
 Pillow==9.5.0
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
+pycparser==2.21
+PyJWT==2.6.0
+python-dotenv==1.0.0
+python3-openid==3.2.0
+requests==2.30.0
+requests-oauthlib==1.3.1
 sqlparse==0.4.4
+urllib3==2.0.2
