--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,34 @@
 asgiref==3.6.0
-camelcase==0.2
 certifi==2022.12.7
-cli-helpers==2.3.0
-click==8.1.3
-configobj==5.0.8
-crispy-bootstrap4==2022.1
-crispy-bootstrap5==0.7
-distlib==0.3.6
-Django==4.1.7
-django-crispy-forms==2.0
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==40.0.2
+defusedxml==0.7.1
+diff-match-patch==20230430
+Django==4.2
+django-allauth==0.54.0
+django-import-export==3.2.0
+django-mailjet==0.3.1
 et-xmlfile==1.1.0
-filelock==3.9.0
 humanize==4.6.0
+idna==3.4
+mailjet-rest==1.3.4
+MarkupPy==1.14
+oauthlib==3.2.2
+odfpy==1.4.1
 openpyxl==3.1.2
-pgcli==2.1.1
-pgspecial==2.1.0
-pipenv==2023.2.18
-platformdirs==3.1.0
-prompt-toolkit==2.0.10
-psycopg==3.1.8
+Pillow==9.5.0
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
-Pygments==2.15.0
-setproctitle==1.3.2
-six==1.16.0
-sqlparse==0.3.1
-tabulate==0.9.0
-typing_extensions==4.5.0
-virtualenv==20.20.0
-virtualenv-clone==0.5.7
-wcwidth==0.2.6
+pycparser==2.21
+PyJWT==2.6.0
+python-dotenv==1.0.0
+python3-openid==3.2.0
+PyYAML==6.0
+requests==2.30.0
+requests-oauthlib==1.3.1
+sqlparse==0.4.4
+tablib==3.4.0
+urllib3==2.0.2
+xlrd==2.0.1
+xlwt==1.3.0
